--- a/client_service/src/main/resources/application.properties
+++ b/client_service/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 ru.share.price.handler.url=http://127.0.0.1:5000/shares/ru/price/{token}
 en.share.price.handler.url=http://127.0.0.1:5000/shares/en/price/{token}
 crypto.price.handler.url=http://127.0.0.1:5000/crypto/price/{token}
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=rg.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
