INVEST-1 Add new price_gateway

--- a/client_service/src/main/resources/application.properties
+++ b/client_service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-ru.share.price.handler.url=http://127.0.0.1:5000/shares/ru/price/{token}
-en.share.price.handler.url=http://127.0.0.1:5000/shares/en/price/{token}
-crypto.price.handler.url=http://127.0.0.1:5000/crypto/price/{token}
+ru.share.price.handler.url=http://127.0.0.1:9090/api/shares/ru/price/{token}
+en.share.price.handler.url=http://127.0.0.1:9090/api/shares/en/price/{token}
+crypto.price.handler.url=http://127.0.0.1:9090/api/crypto/price/{token}
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
