--- a/client_service/Dockerfile
+++ b/client_service/Dockerfile
@@ -1,14 +1,30 @@
-# Use an official OpenJDK runtime as the base image
-FROM openjdk:17-jdk-alpine
+# Stage 1: Build the application
+FROM maven:3.9.4-eclipse-temurin-17 as builder
 
-# Set the working directory in the container
+# Set working directory
 WORKDIR /app
 
-# Copy the Spring Boot jar to the container
-COPY target/my-spring-boot-app.jar app.jar
+# Copy pom.xml and download dependencies (caching layer)
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
 
-# Expose the application port
+# Copy application source code
+COPY src ./src
+
+# Build the application
+RUN mvn clean package -DskipTests
+
+# Stage 2: Run the application
+FROM eclipse-temurin:17-jdk-jammy
+
+# Set working directory
+WORKDIR /app
+
+# Copy the built JAR file from the builder stage
+COPY --from=builder /app/target/*.jar app.jar
+
+# Expose the port that the application will run on
 EXPOSE 8080
 
-# Run the Spring Boot application
+# Set the entry point to run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
